testsuite/tests/dependent/should_fail/T14066.stderr

T14066.hs:15:59: error:
    • Expected kind ‘k2’, but ‘b’ has kind ‘k3’
    • In the second argument of ‘SameKind’, namely ‘b’
      In the type signature: g :: forall k (b :: k). SameKind a b
      In the expression:
        let
          g :: forall k (b :: k). SameKind a b
          g = undefined
        in ()
    • Relevant bindings include
        x :: Proxy a (bound at T14066.hs:15:4)
        f :: Proxy a -> () (bound at T14066.hs:15:1)
